Lots of minor fixes to get code working on more platforms.
CMakeConfig.txt: make_unsigned isn't present on all platforms.
dist/rules: update end of life information.

InterpolationSearch.hpp: Bugfix on using potentially signed distance value range.  Long TODO on
  rewriting interpolation search so it would be somewhat faster.  Update the precondition that we
  actually preserve, and the debug invariant to verify it.

checksum.pm, KnownHostsFile.pm: use new Lintel::SHA1 transition module.

src/CMakeLists.txt: install Lintel/SHA1.pm module

SHA1.pm: Compatibility package to deal with different OS's having different SHA1 implementations.

deptool.in: Handle compatibility for SHA1.

src/perl/CMakeLists.txt: Check for both xsubpp and typemap; some perl module installed by
  project-builder has a directory with one but not the other.

src/tests/CMakeLists.txt: only build interpolation search conditionally.

src/tests/interpolation-search.cpp: Don't output debug info all the time.  Add another test that
  verifies we handle tons of duplicates.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,6 +81,7 @@ IF(PERL_ENABLED)
     LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
     	Text/Expand.pm
     	Lintel/File/Lock.pm
+        Lintel/SHA1.pm
     )
 
     IF(PERL_DIGEST_HMAC_ENABLED AND SSH_ENABLED)
