Next stage of release preparation.
CMakeConfig.txt: Add missing dependency

{debian,redhat}/*: Remove all of the debian/redhat bits, it's all in project-builder now.

dist/rules: Update with new project-builder control bits.  Move the instructions to the top.
  Update the versions and release info for all of the OSs.  Remove the obsolete building bits,
  add in the project-builder ones.

src/CMakeLists.txt: Remove deptool time::hires dependency and merge the two IF(...) stanzas together

deptool.in: Make the Time::HiRes module dependency optional -- some OSs don't have it by default.
  Remove the time logging code.  It was never on by default and to the best of my knowledge no one
  ever used it.

zsh-paths: More complicated path determination, but works more generally.

zshrc: remove COLUMNS env var when doing procfind or we never get more than 80 columns.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -202,16 +202,16 @@ LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-config 1 "Lintel ${LINTEL_VERSION}"
 IF(PERL_ENABLED) 
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(batch-parallel 1 "Lintel ${LINTEL_VERSION}")
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-flock 1 "Lintel ${LINTEL_VERSION}")
-ENDIF(PERL_ENABLED) 
-
-IF(PERL_ENABLED AND PERL_TIME_HIRES_ENABLED) 
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(deptool 1 "Lintel ${LINTEL_VERSION}")
     # Built, but intentionally not installed.
     ADD_CUSTOM_TARGET(deptool-bootstrap ALL 
                       COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make-deptool-bootstrap.sh
     		          ${CMAKE_CURRENT_SOURCE_DIR} 
     		      DEPENDS deptool.in Lintel/File/Lock.pm Lintel/ProcessManager.pm)
-ENDIF(PERL_ENABLED AND PERL_TIME_HIRES_ENABLED) 
+ELSE(PERL_ENABLED)
+    MESSAGE("deptool will NOT be built.  Could not find perl")
+ENDIF(PERL_ENABLED) 
+
 
 IF(PERL_ENABLED AND SFDISK_ENABLED AND SGINFO_ENABLED)
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-disktool 1 "Lintel ${LINTEL_VERSION}")
