More fixes to get things working.
rules: split out the packages rules so we can run subsets more easily during testing.
  Automatically try to fixup download errors when re-running the commands so that
  glitches in the caching can be repaired.  Remove the target file so file completion
  works better.

try-fixup-download-errors.sh: script to try to fix any download errors that may have occurred.

TestUtil.?pp: Add function to get the deptool os/version/arch information so it can be used in
  selectively disabling tests.

src/CMakeLists.txt: add TestUtil.cpp

StatsQuantile.cpp: make variable only appear when in debugging mode to remove warning from compiler.

deptool.in: Fix naming convention for several bits so that we have a-b-c form always.  Include the
  minor version in the build dir for the redhat releases since enough changes during minor releases
  that we can't treat them as the same.  Same fix for centos; add in scientific linux.  Make the
  minor revision fix for opensuse, unclear if it's needed, but likely.

perl/CMakeLists.txt: extract out the perl ccflags and use them.  Needed for perl module to work on
  debian 7.0/i386.

tests/CMakeLists.txt: byte_buffer test is not simple, so remove duplicate.  Deptool does not depend
  on Time::HiRes any more, add in deptool-osarch test.  process_statistics test now needs deptool
  in env to selectively disable.

byte_buffer.cpp: Skip resident size test on opensuse-12.1; it doesn't work.

deptool-osarch.cpp: verify that the c++ and command line arguments agree

process_statistics.cpp: skip resident size test on opensuse, doesn't work.

test-deptool-osarch.sh: Verify that the deptool values and what is parsed in the C++ agree.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ SET(LIBLINTEL_SOURCES
 	StatsSeries.cpp
 	StatsSeriesGroup.cpp
 	StringUtil.cpp
+        TestUtil.cpp
 	${LIBLINTEL_THREAD_SOURCES}
 )
 
